      an invariant-per-process algorithm for generating AtomicFile names
      (Adrian Wilkins, #304023)

    * Many socket operations now handle EINTR by retrying the operation.
      Previously EINTR was treated as an unrecoverable failure.  There is
      a new ``until_no_eintr`` helper function in ``bzrlib.osutils``.
      (Andrew Bennetts)

  DOCUMENTATION:

  API CHANGES:

  TESTING:

  INTERNALS:

    * ``TreeDelta.show()`` now accepts a ``filter`` parameter allowing log
      formatters to retrict the output.
      (Vincent Ladeuil)

bzr 1.11rc1 "Eyes up!" 2009-01-09
---------------------------------

This first monthly release of Bazaar for 2009 improves Bazaar's operation
in Windows, Mac OS X, and other situations where file names are matched
without regard to capitalization: Bazaar tries to match the case of an
existing file.  This release of Bazaar also improves the efficiency of
Tortoise Windows Shell integration and lets it work on 64-bit platforms.

The UI through which Bazaar supports historic formats has been improved,
so 'bzr help formats' now gives a simpler and shorter list, with clear
advice.

This release also fixes a number of bugs, particularly a glitch that can
occur when there are concurrent writes to a pack repository.

  CHANGES:

    * Formats using Knit-based repository formats are now explicitly
      marked as deprecated. (Ian Clatworthy)

  NEW FEATURES:

    * Add support for `bzr tags -r 1..2`, that is we now support showing
      tags applicable for a specified revision range. (Marius Kruger)

    * ``authentication.conf`` now accepts pluggable read-only credential
      stores. Such a plugin (``netrc_credential_store``) is now included,
      handles the ``$HOME/.netrc`` file and can server as an example to
      implement other plugins.
      (Vincent Ladeuil)

    * ``shelve --list`` can now be used to list shelved changes.
      (Aaron Bentley)

  IMPROVEMENTS:
