@@ -51,6 +51,12 @@ NOT RELEASED YET
 
   API CHANGES:
 
+    * ForeignVcsMapping() now requires a ForeignVcs object as first
+      argument. (Jelmer Vernooij)
+
+    * ForeignVcsMapping.show_foreign_revid() has been moved to
+      ForeignVcs. (Jelmer Vernooij)
+
   TESTING:
 
   INTERNALS:
